[gd_scene load_steps=12 format=3 uid="uid://12thm7eyhlxu"]

[ext_resource type="Texture2D" uid="uid://dfvnfvouf3kwi" path="res://art/bg.png" id="1"]
[ext_resource type="Texture2D" uid="uid://crnefu6y4aldd" path="res://art/stars.png" id="2"]
[ext_resource type="Script" path="res://scenes/player.gd" id="3"]
[ext_resource type="Script" path="res://scenes/projectile_manager.gd" id="4"]
[ext_resource type="Script" path="res://scenes/main.gd" id="5"]
[ext_resource type="Script" path="res://scenes/sector.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://dd5tn3o4jalev" path="res://scenes/planet/planet.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://drhqymsmfrs5j" path="res://scenes/ship/ship.tscn" id="8_xw2r5"]
[ext_resource type="PackedScene" uid="uid://dh7nh80r0bslo" path="res://scenes/ship/hud/targetting_hud.tscn" id="9"]

[sub_resource type="LabelSettings" id="LabelSettings_cytcs"]
shadow_color = Color(0.423529, 0.513726, 0.607843, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_x8elr"]
viewport_path = NodePath("UI/TargettingHudOverlay/SubViewport")

[node name="Main" type="Node"]
script = ExtResource("5")

[node name="ProjectileManager" type="Node" parent="."]
script = ExtResource("4")

[node name="Stars" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Stars"]
motion_scale = Vector2(0.05, 0.05)
motion_mirroring = Vector2(1280, 720)

[node name="Sprite2D" type="Sprite2D" parent="Stars/ParallaxLayer"]
texture = ExtResource("1")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Stars"]
motion_scale = Vector2(0.1, 0.1)
motion_offset = Vector2(640, 0)
motion_mirroring = Vector2(1280, 720)

[node name="Sprite2D" type="Sprite2D" parent="Stars/ParallaxLayer2"]
texture = ExtResource("2")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Stars"]
motion_scale = Vector2(0.2, 0.2)
motion_offset = Vector2(320, 320)
motion_mirroring = Vector2(1280, 720)

[node name="Sprite2D" type="Sprite2D" parent="Stars/ParallaxLayer3"]
texture = ExtResource("2")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Stars"]
motion_scale = Vector2(0.3, 0.3)
motion_offset = Vector2(450, 400)
motion_mirroring = Vector2(1280, 720)

[node name="Sprite2D" type="Sprite2D" parent="Stars/ParallaxLayer4"]
texture = ExtResource("2")
centered = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="SpeedLabel" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -40.0
text = "SPEED: 100000 m/s"
clip_text = true

[node name="LandingLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -87.0
offset_right = 83.0
offset_bottom = -55.0
text = "Nice Landing!"
horizontal_alignment = 1
clip_text = true

[node name="RespawnLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = -51.5
offset_right = 163.5
offset_bottom = 51.5
text = "Way to blow up your ship, dingus.

press [enter] to respawn"
label_settings = SubResource("LabelSettings_cytcs")
horizontal_alignment = 1
clip_text = true

[node name="TargettingHudOverlay" type="TextureRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = SubResource("ViewportTexture_x8elr")
stretch_mode = 3

[node name="SubViewport" type="SubViewport" parent="UI/TargettingHudOverlay"]
transparent_bg = true
size = Vector2i(500, 500)

[node name="TargettingHUD" parent="UI/TargettingHudOverlay/SubViewport" instance=ExtResource("9")]
unique_name_in_owner = true
position = Vector2(250, 250)

[node name="Sector" type="Node2D" parent="."]
script = ExtResource("6")

[node name="Planet" parent="Sector" instance=ExtResource("7")]
position = Vector2(1143, 727)

[node name="Planet3" parent="Sector" instance=ExtResource("7")]
position = Vector2(-700, -470)

[node name="Planet2" parent="Sector" instance=ExtResource("7")]
position = Vector2(3117, 463)

[node name="Player" type="Node" parent="."]
script = ExtResource("3")

[node name="Ship" parent="Player" instance=ExtResource("8_xw2r5")]

[node name="Camera2D" type="Camera2D" parent="Player/Ship"]
position_smoothing_speed = 10.0
